gcc/testsuite/g++.dg/template/crash117.C
// PR c++/58649

template<typename> void foo()
{
  E();  // { dg-error "declaration|declared" }    
  enum E {};
}

template void foo<int>();
